  * font encoding cleanup (xinefonts use unicode now)
  * ffmpeg sync (build 4663). WMV8 decoder enabled.
  * much more accurate time display with DVDs
  * xine health check fixes for non-mtrr machines
  * fixes for high-bandwidth RV30 streams
  * fix for vplayer format subtitles
  * fix for distorted display of some DVD menus
  * DVD title/part MRLs (dvd:/<title>.<part>) work much more reliable
	
xine-lib (1-beta9)
  * implement XINE_PARAM_AUDIO_AMP_LEVEL so xine's volume can be
    set independantly from other applications
  * mpeg-4 postprocessing support added to ffmpeg video decoder
  * support HTTP redirections
  * fix mpgaudio demuxer to not try to falsely handle AVI files
  * fix mpeg demuxer to work with chunks bigger than xine's buffers
  * fix libmpeg2 to not wait endlessly for I/P frames,
    fix MPEG artifacts on seek
  * fix the MP3 by content detection for some streams
  * fix segfault with non-multiple of 16 height video and XShm
  * fix BAD STATE error on seek with ALSA audio driver
  * fix artefacts when playing certain DivX video streams on i386
  * libavcodec divx/xvid qpel bug workaround ported from ffmpeg cvs
  * libdvdnav: method to try-run VM operations,
    now used for safer chapter skipping and menu jumps
  * libdvdnav: do not rely on a 1:1 mapping between PTTs and PGs
  * libdvdnav: do not rely on PGs to be physically layed out in sequence

xine-lib (1-beta8)
  * fix DVD highlight problems
	
xine-lib (1-beta7)
  * libdvdnav updated to 0.1.6cvs: fixes a whole class of problems caused
    by dvdnav being a bit ahead in the stream due to xine's fifos
  * libdvdread updated to 0.9.4
  * streaming of avi files (e.g. via http)
  * experimental TiVo-like functionality using WinTV-PVR cards (pvr plugin)
  * rtp input updated to latest API, and rewritten to handle arbitrary
    packet sizes, and both real RTP packets and a stream sent as raw UDP
    packets (common in IP-TV).  RTP packet parsing not tested, and does