@@ -17,7 +17,7 @@
  * along with this program; if not, write to the Free Software
  * Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA
  *
- * $Id: load_plugins.c,v 1.144 2003/03/14 21:37:53 jstembridge Exp $
+ * $Id: load_plugins.c,v 1.145 2003/04/06 01:17:11 guenter Exp $
  *
  *
  * Load input/demux/audio_out/video_out/codec plugins
@@ -1032,9 +1032,9 @@ static demux_plugin_t *probe_demux (xine_stream_t *stream, int method1, int meth
     while (node) {
       demux_plugin_t *plugin;
 
-#ifdef LOG
-      printf ("load_plugins: probing demux '%s'\n", node->info->id);
-#endif
+      if (stream->xine->verbosity >= XINE_VERBOSITY_DEBUG) 
+	printf ("load_plugins: probing demux '%s'\n", node->info->id);
+
       if ((plugin = ((demux_class_t *)node->plugin_class)->open_plugin(node->plugin_class, stream, input))) {
 	pthread_mutex_unlock (&catalog->lock);
 	return plugin;
