@@ -11,6 +11,7 @@ xine-lib (1-beta10)
   * fix for vplayer format subtitles
   * fix for distorted display of some DVD menus
   * DVD title/part MRLs (dvd:/<title>.<part>) work much more reliable
+  * OGM subtitles support
 	
 xine-lib (1-beta9)
   * implement XINE_PARAM_AUDIO_AMP_LEVEL so xine's volume can be
